# alumni_cms

./: .gitignore  CMS_README.md  DYNAMIC_NAVIGATION_README.md  Dockerfile  FRONTEND_BACKEND_SETUP.md  README.md  azure-pipelines.yml  decode-jwt.js  docker-compose.yml  get-fresh-token.js  start-dev.sh  test-connection.js  test-jwt-config.js  test-navigation.js
be/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test-api.sh
be/Application/: DependencyInjection.cs
be/Application/DTOs/: AlumniDTOs.cs  CommonDTOs.cs  EventDTOs.cs  NavigationDTOs.cs
be/Application/Interfaces/: IPasswordService.cs
be/Domain/Entities/: Alumni.cs  ApprovalLevel.cs  Event.cs  EventRegistration.cs  NavigationGroup.cs  NavigationItem.cs  Role.cs  RoleNavigation.cs  User.cs
be/Domain/Interfaces/: IAlumniRepository.cs  IEventRegistrationRepository.cs  IEventRepository.cs  INavigationRepository.cs  IPermissionRepository.cs  IRepository.cs
be/Infrastructure/: Alumni.Infrastructure.csproj
be/Infrastructure/Data/: AppDbContext.cs  SeedData.cs
be/Infrastructure/Migrations/: 20250816180419_InitialCreate.cs  20250816180735_SeedData.Designer.cs  AppDbContextModelSnapshot.cs
be/Infrastructure/Repositories/: AlumniRepository.cs  EventRegistrationRepository.cs  EventRepository.cs  NavigationRepository.cs  RoleRepository.cs  UserRepository.cs
be/Infrastructure/Services/: PasswordService.cs
be/WebAPI/: Alumni.WebAPI.csproj  appsettings.json
be/WebAPI/Controllers/: AlumniController.cs  AuthController.cs  HealthController.cs
be/src/: main.rs
be/src/auth/: auth.rs
(+121 files in other folders)
